--- a/src/app/components/contact/contact.html
+++ b/src/app/components/contact/contact.html
@@ -1,5 +1,5 @@
-  <div class="container-fluid p-0">
-  <div class="  mt-5 conrainer d-flex align-items-center gap-5 justify-content-center flex-reverse flex-row-reverse"  >
+  <div class="mt-0 container-fluid ">
+  <div class="  containerr d-flex align-items-center gap-5 justify-content-center flex-reverse flex-row-reverse"  >
     <div class=" cont  col-md-5  bg-white">
         <h2 class="mb-4 d-flex justify-content-center ">Contact Us</h2>
         <form class="d-flex   flex-column ">
